--- a/114_project.ipynb
+++ b/114_project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZ1g2GLlnUgLxZoLx6/zTI",
+      "authorship_tag": "ABX9TyP3TogNkl7X+N1huloWcrUb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,30 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/milky-way-miw/CSS114_project/blob/main/114_project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "โครงงาน#1 CSS114 (กลุ่มละ 2 คน)\n",
+        "จงสร้างโปรแกรม เพื่อแก้ปัญหาของระบบสมการเชิงเส้น\n",
+        "โดยใช้วิธี ดังต่อไปนี้\n",
+        "1. Gauss Elimination with pivoting\n",
+        "2. Gauss Jordan Elimination\n",
+        "3. LU Factorization\n",
+        "4. Inverse Matrix"
+      ],
+      "metadata": {
+        "id": "E3ZS2xiL4gib"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 2. Gauss Jordan Elimination"
+      ],
+      "metadata": {
+        "id": "hOLxLEaC4-sM"
+      }
     },
     {
       "cell_type": "code",
@@ -65,9 +89,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3rTS9rHWzV1q",
-        "outputId": "c5e3d958-9db9-470b-9c52-49689928619c"
+        "outputId": "7fbd9c5d-6cc7-455f-a5e2-c6473d2fb9d0"
       },
-      "execution_count": 17,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -77,6 +101,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Main"
+      ],
+      "metadata": {
+        "id": "jIZrFXCr49uj"
+      }
     },
     {
       "cell_type": "code",
@@ -162,15 +195,6 @@
         "!gcc gje_input.c -o gje_input\n",
         "!./gje_input"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ONu9uQRJ02Jt"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
