--- a/Explain.ipynb
+++ b/Explain.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyP3TogNkl7X+N1huloWcrUb",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/milky-way-miw/CSS114_project/blob/main/114_project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,6 +12,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "E3ZS2xiL4gib"
+      },
       "source": [
         "โครงงาน#1 CSS114 (กลุ่มละ 2 คน)\n",
         "จงสร้างโปรแกรม เพื่อแก้ปัญหาของระบบสมการเชิงเส้น\n",
@@ -36,22 +23,36 @@
         "2. Gauss Jordan Elimination\n",
         "3. LU Factorization\n",
         "4. Inverse Matrix"
-      ],
-      "metadata": {
-        "id": "E3ZS2xiL4gib"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# 2. Gauss Jordan Elimination"
-      ],
       "metadata": {
         "id": "hOLxLEaC4-sM"
-      }
+      },
+      "source": [
+        "# 2. Gauss Jordan Elimination"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3rTS9rHWzV1q",
+        "outputId": "7fbd9c5d-6cc7-455f-a5e2-c6473d2fb9d0"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Overwriting gje_input.c\n"
+          ]
+        }
+      ],
       "source": [
         "%%writefile gje_input.c\n",
         "#include <stdio.h>\n",
@@ -83,61 +84,20 @@
         "        printf(\"X[%d] = %.2f\\n\", x+1, num[x] / A[x][x]);\n",
         "    }\n",
         "}"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3rTS9rHWzV1q",
-        "outputId": "7fbd9c5d-6cc7-455f-a5e2-c6473d2fb9d0"
-      },
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting gje_input.c\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Main"
-      ],
       "metadata": {
         "id": "jIZrFXCr49uj"
-      }
+      },
+      "source": [
+        "# Main"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "%%writefile gje_input.c\n",
-        "int main() {\n",
-        "    int n;\n",
-        "    printf(\"Enter matrix size n: \");\n",
-        "    scanf(\"%d\", &n);\n",
-        "\n",
-        "    float A[n][n], num[n];\n",
-        "\n",
-        "    printf(\"Enter matrix A (%d x %d):\\n\", n, n);\n",
-        "    for(int i = 0; i < n; i++){\n",
-        "        for(int j = 0; j < n; j++){\n",
-        "            scanf(\"%f\", &A[i][j]);\n",
-        "        }\n",
-        "    }\n",
-        "\n",
-        "    printf(\"Enter num (%d values):\\n\", n);\n",
-        "    for(int i = 0; i < n; i++){\n",
-        "        scanf(\"%f\", &num[i]);\n",
-        "    }\n",
-        "\n",
-        "    GJE(n, A, num);\n",
-        "    return 0;\n",
-        "}"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -145,31 +105,62 @@
         "id": "M9sJ4K_W3pGt",
         "outputId": "6d8cc06c-eb71-464a-caab-5ba59687f4f3"
       },
-      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting gje_input.c\n"
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (2871012833.py, line 2)",
+          "output_type": "error",
+          "traceback": [
+            "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mint main() {\u001b[39m\n        ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
           ]
         }
+      ],
+      "source": [
+        "%%writefile gje_input.c\n",
+        "int main()\n",
+        "{\n",
+        "    int n;\n",
+        "    printf(\"Enter matrix size n: \");\n",
+        "    scanf(\"%d\", &n);\n",
+        "\n",
+        "    float A[n][n], num[n];\n",
+        "\n",
+        "    printf(\"Enter matrix A (%d x %d):\\n\", n, n);\n",
+        "    for (int i = 0; i < n; i++)\n",
+        "    {\n",
+        "        for (int j = 0; j < n; j++)\n",
+        "        {\n",
+        "            scanf(\"%f\", &A[i][j]);\n",
+        "        }\n",
+        "    }\n",
+        "\n",
+        "    printf(\"Enter num (%d values):\\n\", n);\n",
+        "    for (int i = 0; i < n; i++)\n",
+        "    {\n",
+        "        scanf(\"%f\", &num[i]);\n",
+        "    }\n",
+        "    printf(\"\\n\");\n",
+        "\n",
+        "    printf(\"GJE is:\\n\");\n",
+        "    GJE(n, A, num);\n",
+        "    return 0;\n",
+        "}"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 16,
       "metadata": {
-        "id": "ODbldfPxypRz",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "ODbldfPxypRz",
         "outputId": "44497063-be1e-452a-8247-bb8c2ad364df"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Enter matrix size n: 4\n",
             "Enter matrix A (4 x 4):\n",
@@ -196,5 +187,30 @@
         "!./gje_input"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyP3TogNkl7X+N1huloWcrUb",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.1"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
